# WinPopLDdecay

./: CMakeLists.txt  README.md  test_debug.py  test_single_multi.py
PopLDdecay-master/PopLDdecay-master/: README.md
docs/: intall_tutorious.md
src/: CMakeLists.txt  Calculate.h  CommFun.cpp  CommFun.h  DataClass.h  EHHDeal.h  FileDeal.h  FilterGenotype.cpp  FilterGenotype.h  HeadIN.h  LD_Decay.cpp  LD_Decay.h  PariWiseCal.h  ProMethod1.h  ProMethod2.h  gzstream.cpp  gzstream.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plot_lddecay.py  plot_lddecay_multi.py  plot_lddecay_multi_backup.py  plot_lddecay_multi_fixed.py  split_large_vcf.py  test_split_logic.py  test_ui_integration.py
src/tmpcrc/: FileDeal.h  LD_Decay.cpp  ProMethod1.h  ProMethod2.h  ProMethod3.h
src/zlib-develop/zlib-develop/: zdll.exp  zdll.lib  zlib.lib  zlib1.res
